# skil

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  release-plz.toml  wrangler.toml
.github/workflows/: ci.yaml  generate.yaml  release-artifacts.yaml  release-plz.yaml
docs/: README.md  astro.config.mjs  biome.json  package-lock.json  package.json  wrangler.toml
docs/src/content/docs/: overview.md
docs/src/content/docs/commands/: add.md  check.md  completions.md  docs-build.md  docs-serve.md  find.md  init.md  install.md  list.md  remove.md  update.md
docs/src/overrides/: SiteTitle.astro
docs/src/pages/: index.astro
docs/src/styles/: custom.css
skills/skil/: SKILL.md
skills/skil/agents/: openai.yaml
src/: agent.rs  cli.rs  config.rs  error.rs  git.rs  install.rs  lib.rs  lock.rs  main.rs  skill.rs  source.rs  ui.rs
src/commands/: mod.rs
src/core/: CHANGELOG.md  Cargo.toml
src/core/src/: agent.rs  git.rs  install.rs  lib.rs  source.rs
src/docs/: CHANGELOG.md  Cargo.toml
src/docs/assets/: styles.css
src/docs/src/: lib.rs  markdown.rs
src/skil/: CHANGELOG.md  Cargo.toml
src/skil/src/: cli.rs  lib.rs  ui.rs
tests/: install_tests.rs  skill_tests.rs  source_tests.rs
www/: index.html
