[package]
name = "skillz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gix = { version = "0.78.0", features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
thiserror = "2.0.18"
tempfile = "3.10"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "webpki-roots", "blocking"] }
jiff = "0.2.18"
dirs = "6.0.0"
urlencoding = "2.1"
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
toml = "0.8"
