[workspace]
members = ["src/core", "src/docs", "src/skil"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/matoous/skil"
homepage = "https://github.com/matoous/skil"
documentation = "https://docs.rs/skil"
readme = "README.md"

[workspace.dependencies]
skil-core = { path = "src/core" }
skil-docs = { path = "src/docs" }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.4"
gix = { version = "0.78.0", features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
thiserror = "2.0.18"
tempfile = "3.10"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "webpki-roots", "blocking"] }
jiff = "0.2.18"
dirs = "6.0.0"
urlencoding = "2.1"
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
toml = "0.9"
maud = "0.27"
pulldown-cmark = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
