[package]
name = "skil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Core logic for skil"

[dependencies]
gix.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
thiserror.workspace = true
dirs.workspace = true
toml.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
